--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -76,6 +76,9 @@
 \bibitem{bib_decompositionLU_2}
   P. G. Ciarlet - « Introduction à l'analyse numérique matricielle et à l'optimisation » (1985, rééd. 2001), éd. Masson, coll. Math. Appl. pour la Maîtrise (ISBN 2-225-68893-1)
 
+\bibitem{bib_decompositionQRwikipedia}
+  http://fr.wikipedia.org/wiki/Décomposition_QR
+  
 %\bibitem{bib_complexiteInversionMatriceDirecte}
 %  SUR L'INVERSION DE MATRICE,
 %  J.B Lasserre,
