--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -90,4 +90,8 @@
 \bibitem{bib_metaprogramming}
 % C++ Template Metaprogramming
 
+\bibitem{bib_matrixComputation}
+% Matrix Computations (Johns Hopkins Studies in the Mathematical Sciences)
+% by Gene H. Golub (Author), Charles F. Van Loan
+
 \end{thebibliography}
